--- a/SisMaper/Views/ViewBuscarProduto.xaml
+++ b/SisMaper/Views/ViewBuscarProduto.xaml
@@ -15,10 +15,8 @@
     MinWidth="600"
     MinHeight="340"
     Height="450"
-    Width="800">
-    <mah:MetroWindow.DataContext>
-        <viewModel:BuscarProdutoViewModel />
-    </mah:MetroWindow.DataContext>
+    Width="800"
+    d:DataContext="{d:DesignInstance viewModel:BuscarProdutoViewModel}">
     <Grid>
         <ComboBox
             Margin="0,16,140,0"
@@ -81,7 +79,7 @@
                 IsReadOnly="True"
                 Margin="2"
                 SelectionMode="Single"
-                SelectedItem="{Binding ProdutoSelecionado, Mode=TwoWay}">
+                SelectedItem="{Binding Selecionado, Mode=TwoWay}">
                 <DataGrid.Columns>
                     <DataGridTextColumn
                         Width="40*"
@@ -115,14 +113,14 @@
             Content="Selecionar"
             HorizontalAlignment="Right"
             VerticalAlignment="Bottom"
-            PreviewMouseLeftButtonDown="Selecionar"
+            Command="{Binding SelecionarCmd}"
             Margin="0,0,10,10" Height="30" Width="92" />
         <Button
             Style="{DynamicResource SisMaper.Button.OptionsButtonStyle}"
             Content="Cancelar"
             HorizontalAlignment="Right"
             VerticalAlignment="Bottom"
-            PreviewMouseLeftButtonDown="Cancelar"
+            Command="{Binding CancelarCmd}"
             Margin="0,0,112,10" Height="30" Width="81" />
     </Grid>
 </mah:MetroWindow>
