--- a/SisMaper/Views/ViewBuscarProduto.xaml
+++ b/SisMaper/Views/ViewBuscarProduto.xaml
@@ -6,12 +6,12 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:SisMaper.Views"
     xmlns:templates="clr-namespace:SisMaper.Views.Templates"
-    xmlns:iconpacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
     xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
     xmlns:viewModel="clr-namespace:SisMaper.ViewModel"
     mc:Ignorable="d"
     Title="Buscar Produto"
     SaveWindowPosition="True"
+    ShowInTaskbar="False"
     MinWidth="600"
     MinHeight="340"
     Height="450"
