--- a/SisMaper/Views/ViewNaturezas.xaml
+++ b/SisMaper/Views/ViewNaturezas.xaml
@@ -1,87 +1,75 @@
-﻿<mah:MetroWindow 
+﻿<mah:MetroWindow
+    x:Name="this"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:mah="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
-    xmlns:icons="http://metro.mahapps.com/winfx/xaml/iconpacks"
-    xmlns:local="clr-namespace:SisMaper.Views"
-    xmlns:iconpacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
     xmlns:m="clr-namespace:SisMaper.ViewModel"
+    xmlns:templates="clr-namespace:SisMaper.Views.Templates"
     xmlns:Dialog="clr-namespace:MahApps.Metro.Controls.Dialogs;assembly=MahApps.Metro"
-    xmlns:models="clr-namespace:SisMaper.Models"
     Dialog:DialogParticipation.Register="{Binding}"
     x:Class="SisMaper.Views.ViewNaturezas"
-    x:Name="this"
     mc:Ignorable="d"
     Title="Naturezas"
+    ShowInTaskbar="False"
     Height="400"
     Width="400"
     MinHeight="400"
     MinWidth="400"
-    SaveWindowPosition="True"
-    >
-
-    <mah:MetroWindow.DataContext>
-        <m:NaturezaViewModel/>
-    </mah:MetroWindow.DataContext>
-
+    SaveWindowPosition="True">
+    <Window.DataContext>
+        <m:NaturezaViewModel />
+    </Window.DataContext>
     <Grid>
-
-        <StackPanel Width="150" VerticalAlignment="Top" HorizontalAlignment="Left">
-
-            <Button 
-                Content="Adicionar" 
-                Width="100" 
-                Margin="10" 
+        <StackPanel
+            Width="150"
+            VerticalAlignment="Top"
+            HorizontalAlignment="Left">
+            <Button
+                Content="Adicionar"
+                Width="100"
+                Margin="10"
+                Command="{Binding AdicionarCmd}" />
+            <Button
+                Content="Editar"
+                Width="100"
+                Margin="10"
                 CommandParameter="{Binding}"
-                Command="{Binding AdicionarNat}">
-            </Button>
-            <Button 
-                Content="Editar" 
-                Width="100" 
-                Margin="10" 
+                Command="{Binding EditarCmd}" />
+            <Button
+                Content="Remover"
+                Width="100"
+                Margin="10"
                 CommandParameter="{Binding}"
-                Command="{Binding EditarNat}">
-            </Button>
-            <Button 
-                Content="Remover" 
-                Width="100" 
-                Margin="10" 
-                CommandParameter="{Binding}"
-                Command="{Binding RemoverNat}">
-            </Button>
+                Command="{Binding RemoverCmd}" />
         </StackPanel>
-
-        <DataGrid BorderThickness="1" 
+        <DataGrid
+            x:Name="DataGridNaturezas"
+            templates:ColumnDataGridSave.SaveSizes="True"
+            BorderThickness="1"
             SelectionMode="Single"
-            Style="{DynamicResource MahApps.Styles.DataGrid}" 
-            HorizontalContentAlignment="Stretch"        
+            Style="{DynamicResource MahApps.Styles.DataGrid}"
+            HorizontalContentAlignment="Stretch"
             ColumnWidth="*"
-            ItemsSource="{Binding Naturezas}" 
+            ItemsSource="{Binding Naturezas}"
             AutoGenerateColumns="false"
-            CanUserAddRows="False" 
-            IsReadOnly="True" 
+            CanUserAddRows="False"
+            IsReadOnly="True"
             Margin="150,0,0,0"
             SelectedItem="{Binding NaturezaSelecionada}">
-
-            
-
             <DataGrid.Columns>
-                
                 <DataGridTextColumn
                     Width="*"
                     Header="Natureza"
                     Binding="{Binding Descricao}"
                     IsReadOnly="True" />
-
-                
+                <DataGridTextColumn
+                    Width="*"
+                    Header="Classe de Imposto"
+                    Binding="{Binding Classe_de_Imposto}"
+                    IsReadOnly="True" />
             </DataGrid.Columns>
-
         </DataGrid>
-
-
-
     </Grid>
-
 </mah:MetroWindow>
