--- a/SisMaper/Views/ViewVendas.xaml
+++ b/SisMaper/Views/ViewVendas.xaml
@@ -39,7 +39,7 @@
                     Orientation="Horizontal">
                     <Button
                         CommandParameter="{Binding}" 
-                        Command="{Binding NovoPedido}"
+                        Command="{Binding NovoPedidoCmd}"
                         Style="{StaticResource SisMaper.ToolBar.Button}">
                         <StackPanel>
                             <iconpacks:PackIconPixelartIcons
@@ -53,7 +53,10 @@
                                 Text="Novo" />
                         </StackPanel>
                     </Button>
-                    <Button Style="{StaticResource Button1}" CommandParameter="{Binding}" Command="{Binding EditarPedido}">
+                    <Button 
+                            CommandParameter="{Binding}"
+                            Command="{Binding EditarPedidoCmd}"
+                        Style="{StaticResource SisMaper.ToolBar.Button}">
                         <StackPanel>
                             <iconpacks:PackIconModern
                                 Kind="EditBox"
@@ -68,7 +71,7 @@
                     </Button>
                     <Button
                         CommandParameter="{Binding}" 
-                        Command="{Binding ExcluirPedido}"
+                        Command="{Binding ExcluirPedidoCmd}"
                         Style="{StaticResource SisMaper.ToolBar.Button}">
                         <StackPanel>
                             <iconpacks:PackIconMaterial
@@ -182,7 +185,7 @@
             Margin="5,5,5,5">
             <DataGrid.InputBindings>
                 <MouseBinding Gesture="LeftDoubleClick" 
-                        Command="{Binding EditarPedido}" 
+                        Command="{Binding EditarPedidoCmd}" 
                         CommandParameter="{Binding }" />
             </DataGrid.InputBindings>
             <DataGrid.Columns>
